<resources>
    <string name="app_name">편안한 캠퍼스</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu">Menu</string>
    <string name="small_menu">메뉴</string>

    <string name="signUp">회원가입</string>
    <string name="signIn">로그인</string>
    <string name="signOut">로그아웃</string>
    <string name="upload">올리기</string>
    <string name="편안한_Campus">편안한 Campus</string>

    <string name="Login">Login</string>
    <string name="Logout">Logout</string>

    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="accountmanagement">계정 관리</string>
    <string name="id">아이디</string>
    <string name="changepassword">비밀번호 변경</string>
    <string name="informationuse">이용 안내</string>
    <string name="announcement">공지사항</string>
    <string name="question">문의하기</string>
    <string name="appversion">앱 버전</string>
    <string name="privacypolicy">개인정보 처리 방침</string>

    <string-array name="category_array">
        <item>스포츠</item>
        <item>의료</item>
        <item>봉사</item>
        <item>코딩</item>
        <item>창업</item>
        <item>종교</item>
        <item>예술</item>
        <item>기타</item>
    </string-array>

    <string name="add_content">Add Content</string>
    <string name="save">Save</string>

    <!-- ClubBoardFragment -->
    <string name="club_board">Club Board</string>

    <!-- ClubIntroFragment -->
    <string name="club_image">Club Image</string>
    <string name="club_name">Club Name</string>
    <string name="club_description">Club Description</string>
    <string name="club_long_description">Detailed Club Description</string>

    <!-- ClubNoticeFragment -->
    <string name="notice_image">Notice Image</string>
    <string name="notice_club_name">Club Name</string>
    <string name="recruitment_period">Recruitment Period</string>
    <string name="interview">Interview</string>
    <string name="notice_content">Notice Content</string>

    <!-- Tab titles -->
    <string name="tab_intro">소개</string>
    <string name="tab_free">자유</string>
    <string name="tab_activity">활동</string>
    <string name="tab_notice">공고문</string>

    <!-- Input page strings -->
    <string name="detailed_image">Detailed Image</string>

    <string name="input_recruitment_period">모집 기간을 입력하세요</string>
    <string name="input_interview">인터뷰 정보를 입력하세요</string>
    <string name="input_notice_interview">Interview</string>
    <string name="input_club_image">Upload Image</string>
    <string name="input_club_name">Enter Club Name</string>
    <string name="input_club_description">Enter Short Description</string>
    <string name="input_club_long_description">Enter Detailed Description</string>
    <string name="input_notice_club_name">Enter Club Name</string>
    <string name="input_notice_recruitment_period">Enter Recruitment Period</string>
    <string name="fab">Enter Interview Details</string>
    <string name="input_notice_content">Enter Notice Content</string>

    <string name="activity_image">Activity Image</string>
    <string name="input_activity_name">Enter activity name</string>
    <string name="input_activity_description">Enter activity description</string>
    <string name="input_activity_long_description">Enter detailed activity description</string>
    <string name="add_activity_photo">Add Activity Photo</string>
    <string name="input_photo_description">Enter photo description</string>
</resources>