<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.JoyfulCampus.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mypagetoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FFFFFF"
            android:elevation="20dp"
            app:popupTheme="@style/Theme.JoyfulCampus.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/profileimage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_baseline_person_24"
                    />

                <ImageView
                    android:contentDescription="@null"
                    android:id="@+id/editbotton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="65dp"
                    android:layout_marginStart="70dp"
                    android:background="@drawable/circle"
                    android:paddingTop="7dp"
                    android:paddingStart="7dp"
                    android:paddingEnd="7dp"
                    android:paddingBottom="7dp"
                    android:src="@drawable/baseline_edit_24"
                    />

                <TextView
                    android:id="@+id/usernametext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/departmentnametext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="55dp"
                    android:textSize="18sp"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/accountmanagementframelayout"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/accountmanagementtextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:text="@string/accountmanagement"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/idframelayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:id="@+id/idtextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/id"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/useridtextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="end"
                    android:textSize="15sp"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/passwordframelayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:id="@+id/passwordtextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/changepassword"
                    android:textSize="15sp"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/logoutframelayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:id="@+id/logoutextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/signOut"
                    android:textSize="15sp"
                    />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="#7C7C7C"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/informationuseframelayout"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/informationusetextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:text="@string/informationuse"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/announcementframelayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:id="@+id/announcementtextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/announcement"
                    android:textSize="15sp"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/questionframelayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:id="@+id/questiontextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/question"
                    android:textSize="15sp"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/appversionframelayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:id="@+id/appversiontextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/appversion"
                    android:textSize="15sp"
                    />

                <TextView
                    android:id="@+id/versiontextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="end"
                    android:text="1.1"
                    android:textSize="15sp"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/privacypolicyframelayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                >

                <TextView
                    android:id="@+id/privacypolicytextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/privacypolicy"
                    android:textSize="15sp"
                    />

            </FrameLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>